# cpp_zada4i

./: CMakeLists.txt
task1v6/: main.cpp
task2v6/: task2.cpp
task3v6/: task3.cpp
task4v6/: CMakeLists.txt  GraphMSTApp  graph.cpp  graph.h  log.txt  main.cpp  mfc-main.cpp
